# internal/server/handlers/device/add.go
@@ -3,33 +3,34 @@ package device
 import (
 	"device-manager/internal/kafka"
 	"device-manager/internal/server/handlers"
-
 	"encoding/json"
-
 	"net/http"
+	"net/mail"
 
 	"github.com/gin-gonic/gin"
+	"github.com/google/uuid"
+	"golang.org/x/text/language"
 )
 
 type AddDeviceRequest struct {
-	UUID        string `json:"uuid"`
-	Platform    string `json:"platform"`
-	Language    string `json:"language"`
-	Geolocation string `json:"geolocation"`
-	Email       string `json:"email"`
+	UUID        string    `json:"uuid"`
+	Platform    string    `json:"platform"`
+	Language    string    `json:"language"`
+	Coordinates []float64 `json:"coordinates"`
+	Email       string    `json:"email"`
 }
 
-//	@Summary		Add device
-//	@Description	Add a new device to database
-//	@Tags			Device
-//	@Accept			json
-//	@Produce		json
-//	@Param			request	body	AddDeviceRequest	true	"Add Device Request"
-//	@Success		201
-//	@Failure		400	{object}	handlers.ErrorResponce
-//	@Failure		500	{object}	handlers.ErrorResponce
-//	@Router			/device [post]
-func (h *DeviceHandler) AddDevice(ctx *gin.Context) {
+// @Summary		Add device
+// @Description	Add a new device to database
+// @Tags			Device
+// @Accept			json
+// @Produce		json
+// @Param			request	body	AddDeviceRequest	true	"Add Device Request"
+// @Success		200
+// @Failure		400	{object}	handlers.ErrorResponce
+// @Failure		500	{object}	handlers.ErrorResponce
+// @Router			/device [post]
+func (h *DeviceHandler) Add(ctx *gin.Context) {
 	var req AddDeviceRequest
 	err := ctx.ShouldBindJSON(&req)
 	if err != nil {
@@ -37,7 +38,26 @@ func (h *DeviceHandler) AddDevice(ctx *gin.Context) {
 			handlers.ErrorResponce{Message: "Failed to parse request", Error: err})
 		return
 	}
-	// err = h.service.CreateDevice(ctx, req.UUID, req.Platform, req.Language, req.Geolocation, req.Email)
+
+	_, err = uuid.ParseBytes([]byte(req.UUID))
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest,
+			handlers.ErrorResponce{Message: "Failed to parse UUID", Error: err})
+		return
+	}
+	_, err = language.Parse(req.Language)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest,
+			handlers.ErrorResponce{Message: "Failed to parse language", Error: err})
+		return
+	}
+	_, err = mail.ParseAddress(req.Email)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest,
+			handlers.ErrorResponce{Message: "Failed to parse E-mail", Error: err})
+		return
+	}
+
 	bytes, err := json.Marshal(req)
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest,
@@ -47,15 +67,8 @@ func (h *DeviceHandler) AddDevice(ctx *gin.Context) {
 	err = h.Producer.WriteMessage(ctx, kafka.DeviceCreate, bytes)
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError,
-			handlers.ErrorResponce{Message: "Failed to add a new person to database", Error: err})
+			handlers.ErrorResponce{Message: "Failed to write message to kafka", Error: err})
 		return
 	}
-	// ctx.JSON(http.StatusCreated, domain.Device{
-	// 	UUID:        req.UUID,
-	// 	Platform:    req.Platform,
-	// 	Language:    req.Language,
-	// 	Geolocation: req.Geolocation,
-	// 	Email:       req.Email,
-	// })
-	ctx.JSON(http.StatusCreated, nil)
+	ctx.JSON(http.StatusOK, nil)
 }
